<resources>
    <string name="app_name">Remy</string>
    <string name="action_settings">Settings</string>

    //authentication
    <string name="main_Activity_Motivation">Just do it</string>

    <string name="main_Activity_Auth_LogIn_Email">email</string>
    <string name="main_Activity_Auth_LogIn_Password">password</string>
    <string name="main_Activity_LogIn_Button">log in</string>
    <string name="main_Activity_SignIn_Button">sign up</string>
    <string name="main_Activity_help_dialog">Please enter your email address \n and your password. The password \n has to have at least 7 characters. \n If you already have an account \n click "log in", if you wish to create \n a new Account click "sign up"</string>

    <string name="main_Activity_SignIn_Toast">New account created</string>
    <string name="main_Activity_SignInFail_Toast">Couldn\'t create account</string>
    <string name="main_Activity_LogInFail_Toast">log in failed</string>
    <string name="main_Activity_PasswordEmpty_Toast">Please enter a password</string>
    <string name="main_Activity_EmailEmpty_Toast">Please enter a email address</string>
    <string name="main_Activity_EmailPassEmpty_Toast">Please enter a email address and a password</string>
    <string name="main_Activity_PasswordFalse_Toast">password is incorrect</string>
    <string name="main_Activity_PasswordInvalid_Toast">invalid password</string>
    <string name="main_Activity_EmailInvalid_Toast">invalid email</string>
    <string name="main_Activity_EmailPasswordInvalid_Toast">invalid email and invalid password</string>
    <string name="list_Activity_LogOut_Button">log out</string>


    //task functions
    <string name="task_Activity_LabelSuccess_Toast">label successfully added </string>
    <string name="task_Activity_LabelDelete_Toast">label successfully deleted </string>
    <string name="task_Activity_LabelFail_Toast">too many labels</string>
    <string name="task_Activity_Label_layout">layout</string>
    <string name="task_Activity_help_dialog">Click on the buttons to choose your Notifications. If you click on at least one of them, you will get motivations notifications for this specific task. You can choose between cute \u0020 \u0020 \u0020, normal \u0020 \u0020 \u0020, brutal \u0020 \u0020 \u0020, weird \u0020 \u0020 or funny \u0020 \u0020 \u0020 notifications or just get them all. If you click on the \u0020 \u0020 you won\'t receive any kind of notification (inclusive the notification when your task is due!)</string>

    //repeat task
    <string name="RepeatTask_Activity_RepeatTask">New RepeatTask at your service</string>
    <string name="RepeatTask_Activity_RepeatTask_change">Your RepeatTask at your service</string>


    <string name="RepeatTask_Activity_title_field">title</string>
    <string name="RepeatTask_Activity_Label_Button">OK</string>
    <string name="RepeatTask_Activity_setLabel_field">set label</string>

    <string name="RepeatTask_Activity_Repeat">Repeat</string>
    <string name="RepeatTask_Activity_HowOftRepeat_Field">x</string>
    <string name="RepeatTask_Activity_RepeatTimes">times per</string>
    <string name="RepeatTask_Activity_RepeatCircles">x</string>

    <string name="RepeatTask_Activity_RepeatCircleDialog_ok">OK</string>
    <string name="RepeatTask_Activity_RepeatCircleDialog_cancel">Cancel</string>
    <string name="RepeatTask_Activity_RepeatCircleDialog_title">Repeat per</string>
    <string name="RepeatTask_Activity_notification_display">Choose your Notification wisely</string>


    <string name="RepeatTask_Activity_description">description: </string>
    <string name="RepeatTask_Activity_description_field">put more information here</string>
    <string name="RepeatTask_Activity_Check_Button">OK</string>

    //deadline task
    <string name="DeadlineTask_Activity_DeadlineTask">New DeadlineTask at your service</string>
    <string name="DeadlineTask_Activity_DeadlineTask_change">Your DeadlineTask at your service</string>

    <string name="DeadlineTask_Activity_title_field">title</string>
    <string name="DeadlineTask_Activity_Label_Button">OK</string>
    <string name="DeadlineTask_Activity_setLabel_field">set label</string>

    <string name="DeadlineTask_Activity_time_field">xx:xx</string>
    <string name="DeadlineTask_Activity_date_field">xx.xx.xxxx</string>
    <string name="DeadlineTask_Activity_time_display">time:</string>
    <string name="DeadlineTask_Activity_date_display">date:</string>
    <string name="DeadlineTask_Activity_notification_display">Choose your Notification wisely</string>
    <string name="DeadlineTask_Activity_interval_fail">please choose the period of time of your task first</string>
    <string name="DeadlineTask_Activity_interval_unit_day">day</string>
    <string name="DeadlineTask_Activity_interval_unit_hour">hour</string>
    <string name="DeadlineTask_Activity_interval_unit_week">week</string>
    <string name="DeadlineTask_Activity_interval_unit_month">month</string>


    <string name="DeadlineTask_Activity_description">description: </string>
    <string name="DeadlineTask_Activity_description_field">put more information here</string>
    <string name="DeadlineTask_Activity_Check_Button">OK</string>

    <string name="DeadlineTask_Activity_Change_toast">task successfully changed</string>


    //task due
    <string name="TaskDue_Activity_noNotification_Button">no notification-option set</string>
    <string name="TaskDue_Activity_Notification_Button">receive notification-option set</string>
    <string name="TaskDue_Activity_Notification_Remove_toast">task successfully removed</string>



    //list functions
    <string name="list_Activity_delete_button">delete</string>
    <string name="list_Activity_add_button">add</string>
    <string name="list_Activity_logout_button">log out</string>
    <string name="list_Activity_title_listItem">title</string>
    <string name="list_Activity_date_listItem">date</string>


</resources>
