<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="101dp" />

        <EditText
            android:id="@+id/main_Activity_Auth_LogIn_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/main_Activity_Auth_LogIn_Email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/main_Activity_Auth_LogIn_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/main_Activity_Auth_LogIn_Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/main_Activity_LogIn_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_Activity_LogIn_Button" />

        <Button
            android:id="@+id/main_Activity_SignIn_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_Activity_SignIn_Button" />
    </LinearLayout>

</FrameLayout>
