<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/list_Activity_LogOut_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_Activity_LogOut_Button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="62dp" />

        <Button
            android:id="@+id/list_Activity_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_Activity_add_button" />

        <Button
            android:id="@+id/list_Activity_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_Activity_delete_button" />

    </LinearLayout>
</FrameLayout>