<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/DeadlineTask_Activity_description_field"
            android:layout_width="280dp"
            android:layout_height="84dp"
            android:layout_marginTop="16dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/RepeatTask_Activity_description_field"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_description"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_description" />

        <ImageView
            android:id="@+id/RepeatTask_Activity_Check_Button"
            android:layout_width="35dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_check_light_blue"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeadlineTask_Activity_description_field" />

        <TextView
            android:id="@+id/RepeatTask_Activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/RepeatTask_Activity_description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_Repeat" />

        <EditText
            android:id="@+id/RepeatTask_Activity_title_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:ems="10"
            android:hint="@string/RepeatTask_Activity_title_field"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_setLabel_field"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activiy_Rectangle_light_blue" />

        <EditText
            android:id="@+id/RepeatTask_Activity_setLabel_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="AUTOFILL_TYPE_TEXT"
            android:ems="10"
            android:hint="@string/RepeatTask_Activity_setLabel_field"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_description"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_title_field" />

        <ImageView
            android:id="@+id/RepeatTask_Activity_Label_Button"
            android:layout_width="43dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_add_label_light_blue"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/task_Activity_Label_layout"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activity_setLabel_field"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_title_field" />

        <GridView
            android:id="@+id/task_Activity_Label_layout"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:columnWidth="150dp"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:stretchMode="spacingWidthUniform"
            android:verticalSpacing="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_setLabel_field" />

        <ImageButton
            android:id="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            android:layout_width="0dp"
            android:layout_height="142dp"
            android:background="#00BCD4"
            android:backgroundTint="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/RepeatTask_Activity_RepeatTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/RepeatTask_Activity_RepeatTask"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FDFDFE"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            app:layout_constraintTop_toTopOf="@+id/RepeatTask_Activiy_Rectangle_light_blue" />

        <ImageView
            android:id="@+id/RepeatTask_Activiy_smiley"
            android:layout_width="85dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_smiley"
            app:layout_constraintBottom_toBottomOf="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            app:layout_constraintEnd_toStartOf="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activiy_Rectangle_light_blue"
            app:layout_constraintTop_toBottomOf="@+id/RepeatTask_Activity_RepeatTask" />

        <TextView
            android:id="@+id/RepeatTask_Activity_Repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/RepeatTask_Activity_Repeat"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_description"
            app:layout_constraintTop_toBottomOf="@+id/task_Activity_Label_layout" />

        <Button
            android:id="@+id/RepeatTask_Activity_fakeButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_button_round_blue"
            app:layout_constraintBottom_toBottomOf="@+id/RepeatTask_Activity_Repeat"
            app:layout_constraintEnd_toStartOf="@+id/RepeatTask_Activity_RepeatTimes"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activity_Repeat"
            app:layout_constraintTop_toTopOf="@+id/RepeatTask_Activity_Repeat" />

        <TextView
            android:id="@+id/RepeatTask_Activity_RepeatTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/RepeatTask_Activity_RepeatTimes"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/RepeatTask_Activity_HowOftRepeat"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activity_HowOftRepeat" />

        <Button
            android:id="@+id/RepeatTask_Activity_fakeButton_2"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/ic_button_round_blue"
            app:layout_constraintBottom_toBottomOf="@+id/RepeatTask_Activity_RepeatTimes"
            app:layout_constraintStart_toEndOf="@+id/RepeatTask_Activity_RepeatTimes"
            app:layout_constraintTop_toTopOf="@+id/RepeatTask_Activity_RepeatTimes" />

        <TextView
            android:id="@+id/RepeatTask_Activity_RepeatCircles"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/RepeatTask_Activity_RepeatCircles"
            android:textColor="#FDFDFE"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/RepeatTask_Activity_RepeatTimes"
            app:layout_constraintEnd_toEndOf="@+id/RepeatTask_Activity_fakeButton_2"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_fakeButton_2" />

        <TextView
            android:id="@+id/RepeatTask_Activity_HowOftRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RepeatTask_Activity_HowOftRepeat_Field"
            android:textAlignment="textStart"
            android:textColor="#FDFDFE"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/RepeatTask_Activity_Repeat"
            app:layout_constraintEnd_toEndOf="@+id/RepeatTask_Activity_fakeButton"
            app:layout_constraintStart_toStartOf="@+id/RepeatTask_Activity_fakeButton" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>